--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise1</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Kdam+Thmor+Pro&family=Rubik:wght@900&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <h1>1 - Floats</h1>
     
-    <div class="float-one"></div>
-    <div class="float-two"></div>
-    <div class="float-three"></div>
-    <div class="float-four"></div>
-    <div class="clearfix"></div>
-
+    <div class="border">
+        <div class="float-one"></div>
+        <div class="float-two"></div>
+        <div class="float-three"></div>
+        <div class="float-four"></div>
+        <div class="clearfix"></div>
+    </div>
     <br>
     <br>
     <br>
@@ -23,11 +27,15 @@
     <h1>2 - UL > Li Display Inline</h1>
 
     <div class="central">
-        <div class="float-a">Home</div>
-        <div class="float-b">Quem Somos</div>
-        <div class="float-c">Clientes</div>
-        <div class="float-d">Contactos</div>
+        <div><b>Home</b></div>
+        <div>Quem Somos</div>
+        <div>Clientes</div>
+        <div>Contactos</div>
     </div>
+
+    <br>
+    <br>
+    <br>
     
 </body>
 </html>
