--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <h1>1 - Floats</h1>
     
-    <div class="border">
+    <div class="box-color">
         <div class="float-one"></div>
         <div class="float-two"></div>
         <div class="float-three"></div>
@@ -26,7 +26,7 @@
 
     <h1>2 - UL > Li Display Inline</h1>
 
-    <div class="central">
+    <div class="horizontal-bar">
         <div><b>Home</b></div>
         <div>Quem Somos</div>
         <div>Clientes</div>
