--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -3,10 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="exercise2/styles">
+    <title>Exercise2</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+
+    <div class="square"></div>
     
+    <div class="main-square">
+        <div class="second-square"></div>
+    </div>
+
+    <div class="main-square2">
+        <div class="second-square2"></div>
+    </div>
+
+    <div class="circle"></div>
+
+    <div class="box">
+        <div class="circle2"></div>
+    </div>
+
+    <div class="box-border"></div>
+    <div class="box-border2"></div>
+    <div class="circle3"></div>
+
+    <div class="box-border3"></div>
+    <div class="box-border4"></div>
+    <div class="circle4"></div>
+
+
+
 </body>
 </html>
